--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=info
+logging.level.org.springframework=debug
 spring.application.name=spring-cloud-config-server
 server.port=8888
 spring.cloud.config.server.git.uri=file:///C:/workspace/Git/git-localconfig-repo
